updated go swag docs
